test/compile-fail/exp__array.he
fn main
{
    let b = [1, "string"];  //~ ERROR 3002
}
